# backend/models/exercise.py
@@ -10,8 +10,6 @@ class Exercise(Base):
     id: Mapped[int] = mapped_column(Integer, primary_key=True)
     name: Mapped[str] = mapped_column(String, nullable=False)
     muscles: Mapped[str | None] = mapped_column(String)
-    session: Mapped[str] = mapped_column(String, nullable=False)
-    position: Mapped[int] = mapped_column(Integer, nullable=False, default=0)
     type: Mapped[str] = mapped_column(String, nullable=False)  # "weight" | "bodyweight"
     equip: Mapped[str] = mapped_column(
         String, nullable=False
